Fix link wrap to only happen on mobile.

--- a/themes/custom/assets/source/scss/elements/_wysiwyg-content.scss
+++ b/themes/custom/assets/source/scss/elements/_wysiwyg-content.scss
@@ -85,7 +85,10 @@
 		&:not(.button):not(.wp-block-button__link) {
 			color: $color-primary;
 			text-decoration: underline;
-			word-break: break-all;
+
+			@include mq($mq-tablet, false) {
+				word-break: break-all;
+			}
 
 			&:focus,
 			&:hover {
